backend.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: "524528614447.dkr.ecr.us-east-2.amazonaws.com/backendimage_d:latest"
          imagePullPolicy: Always
          ports:
            - name: tcp
              containerPort: 8000
---


apiVersion: v1
kind: Service
metadata:
 name: backend-service
spec:
 type: NodePort
 selector:
  app: backend
 ports:
 - protocol: TCP
   port: 8000
