frontend.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: frontend
        image: "524528614447.dkr.ecr.us-east-2.amazonaws.com/frontendimg_1:latest"
        imagePullPolicy: Always
        ports :
        - name: http
          containerPort: 80
        volumeMounts:
        - name: chatapp
          mountPath: "/etc/nginx/conf.d/"
          readOnly: true
      volumes:
      - name: chatapp
        configMap:
          name: chatapp-conf
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
