mysql.yml

apiVersion: v1
kind: Service
metadata:
  name: mysqldb
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3306
  selector:
    app: mysql

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.6



        name: mysqldb
        ports:
        - name: tcp
          containerPort: 3306
        volumeMounts:

        - name: data-db
          mountPath: /var/lib/mysql
      volumes:
      - name: data-db
        persistentVolumeClaim:
          claimName: mypvc
